# youtube

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  render.yaml  requirements.txt  setup.cfg  vercel.json
.github/workflows/: ci.yml
config/: logger.py  logging_config.py
docs/source/: api.rst  conf.py  index.rst  logging.rst  monitoreo.rst
grafana/dashboards/: default.json
prometheus/: prometheus.yml
scripts/: backup.sh  serve_docs.sh
static/swagger/: openapi.yaml
templates/: analytics.html  check_social.html  dashboard.html  dashboard_new.html  login.html  modern_login.html  report_template.html  report_template_new.html  youtube_dashboard.html
tests/: test_app.py
