[project]
name = "eliberto"
version = "0.1.0"
description = ""
authors = [
    {name = "pyoneerC",email = "maxcomperatutti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "browser-use (>=0.1.45,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"